--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        python-root: '.'
+        flake8-flags: ''
+        mapy-flags: ''
+        fail-on-isort: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
