--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,9 @@ jobs:
         flake8-flags: ''
         mapy-flags: ''
         fail-on-isort: true
+      with:
+          context: ./
+          file: Docerfile
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
