--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-dotenv==0.20.0
-aiogram==2.19
-aioify==0.4.0
-deezloader==2022.3.5
-requests==2.27.1
-mutagen==1.45.1
-Pillow==9.1.0
-yt-dlp==2022.5.18
+python-dotenv
+aiogram
+aioify
+deezloader
+requests
+mutagen
+Pillow
+yt-dlp
 pytest
